# task3.4_Calculator

./: CMakeLists.txt  README.md
calculator/: CMakeLists.txt  calculator_library.cpp  calculator_library.hpp
calculator/tests/: CMakeLists.txt  tests.cpp
